Alteraçao lista numerada, utilizando display: inline-block

--- a/semana2/bugfixes/home.html
+++ b/semana2/bugfixes/home.html
@@ -15,11 +15,14 @@
     <div>
         <div class="container" id="container-de-descricao">
             <div>
-            <p> Somos uma empresa focada <br> em tornar a compra de <br> roupas mais fácil </p>
-            <ol>
-                <li> Ache os melhores descontos </li>
-                <li> Busque pelos seus gostos</li>
-            </ol>
+            <p> Somos uma empresa focada <br> em tornar a compra de <br> roupas mais fácil </p><br><br>
+        <div id="ol">
+        <ol>
+            <li> Ache os melhores descontos </li>
+            <li> Busque pelos seus gostos</li>
+        </ol>
+        </div>
+    
             <h3> Realize seus sonhos conosco</h3>
         </div>
         </div>
