--- a/semana2/aula6-flexboxGrid/Grid/atividade3grid.html
+++ b/semana2/aula6-flexboxGrid/Grid/atividade3grid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" type="text/css" href="atividades3.css">
+    <link rel="Stylesheet" type="text/css" href="./atividade3grid.css">
     <title>Atividade 3</title>
 </head>
 <body>
