--- a/semana2/aula6-flexboxGrid/Grid/atividade3grid.html
+++ b/semana2/aula6-flexboxGrid/Grid/atividade3grid.html
@@ -8,15 +8,14 @@
 </head>
 <body>
 
+    <div class="container">    
     <div class="header">
     <div id="header">HEADER</div>
     <div id="menu">MENU</div>
     </div>
 
-    <div id="contante1">
     <div id="content1">CONTENT1</div>
-    </div>
-
+    
     <div id="section">
     <div id="content2">CONTENT2</div>
 
@@ -28,6 +27,9 @@
     </div>
 
     <div id="footer">FOOTER</div>
+
+</div>
+
 
 </body>
 </html>
