--- a/semana10/astrotrips-boilerplate/public/index.html
+++ b/semana10/astrotrips-boilerplate/public/index.html
@@ -22,6 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Comfortaa:wght@300&family=Homemade+Apple&display=swap" rel="stylesheet">
     <title>AstroTrips</title>
   </head>
 
